@@ -1,11 +1,19 @@
 import React from 'react';
 
 import Avatar from '../avatar';
+import TooltipMixin from '../../mixins/tooltip';
+import {userDisplayName} from '../../utils/formatters';
 
 const GroupParticipants = React.createClass({
   propTypes: {
     participants: React.PropTypes.array.isRequired
   },
+
+  mixins: [
+    TooltipMixin({
+      selector: '.tip'
+    })
+  ],
 
   render() {
     let participants = this.props.participants;
@@ -20,7 +28,7 @@ const GroupParticipants = React.createClass({
         <ul className="faces">
           {participants.map((user, i) => {
             return (
-              <li key={i}>
+              <li key={user.username} className="tip" title={userDisplayName(user)}>
                 <Avatar size={32} user={user} />
               </li>
             );
